Fixes navbar transition overlap when using dark-theme

--- a/src/styles-dark-theme.css
+++ b/src/styles-dark-theme.css
@@ -20,7 +20,6 @@ html.dark-mode body,
 html.dark-mode .backgroud-style,
 html.dark-mode .card-header {
     background-color: #2e2e2e !important;
-    transition: background-color 0.3s;
 }
 
 html.dark-mode .backgroud-style,
